--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,15 @@ dependencies:
   icons_launcher: ^3.0.0
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  auto_route: ^9.3.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
     
   flutter_lints: ^5.0.0
+  auto_route_generator: ^9.3.1
+  build_runner: ^2.4.15
   
 flutter:
 
@@ -26,5 +29,6 @@ flutter:
 
   assets:
     - assets/
+    - assets/icons/
     - assets/images/
     - assets/graphics/
