--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
   auto_route: ^9.3.0+1
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
