--- a/icons_launcher.yaml
+++ b/icons_launcher.yaml
@@ -3,5 +3,7 @@ icons_launcher:
   platforms:
     android:
       enable: true
+      adaptive_background_color: '#FFFFFF'
+      adaptive_foreground_image: 'assets/logo.png'
     ios:
       enable: true
