--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -20,7 +20,7 @@ jobs:
       - run: pod repo update
         working-directory: ios
 
-      - run: flutter build ios --release --no-codesign
+      - run: flutter build ios --release
 
       - run: mkdir Payload
         working-directory: build/ios/iphoneos
